--- a/campus02.ProjektLieferkostenberechnung/campus02.ProjektLieferkostenberechnung.csproj
+++ b/campus02.ProjektLieferkostenberechnung/campus02.ProjektLieferkostenberechnung.csproj
@@ -95,5 +95,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Austria.png" />
+    <Resource Include="DE.png" />
+    <Resource Include="Spain.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
