--- a/campus02.ProjektLieferkostenberechnung/campus02.ProjektLieferkostenberechnung.csproj
+++ b/campus02.ProjektLieferkostenberechnung/campus02.ProjektLieferkostenberechnung.csproj
@@ -69,6 +69,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Land.cs" />
     <Compile Include="Models\Lieferkosten.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
