--- a/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
+++ b/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Kinofilm.cs" />
+    <Compile Include="Models\KinofilmViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
