--- a/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
+++ b/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
@@ -74,10 +74,17 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NeuerKinofilm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Kinofilm.cs" />
     <Compile Include="Models\KinofilmViewModel.cs" />
+    <Compile Include="NeuerKinofilm.xaml.cs">
+      <DependentUpon>NeuerKinofilm.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
