--- a/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
+++ b/ProjektKinofilmverwaltung/ProjektKinofilmverwaltung.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="WindowNewGenre.xaml.cs">
+      <DependentUpon>WindowNewGenre.xaml</DependentUpon>
+    </Compile>
     <Page Include="DockPanelSample.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -75,6 +78,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="NeuerKinofilm.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowNewGenre.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
